# mto10client_linux

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  mto10client.tar.bz2
config/: network.config
include/: argument.h  global.h  logging.h  mto10.h  network.h  read_config.h  solve.h
log/: runtimelog.txt
src/: CMakeLists.txt  Makefile  argument.cpp  cmake_install.cmake  mto10.cpp  network.cpp  solve.cpp
